# web-research-deep

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_deep.py
.github/workflows/: ci.yml
docs/: config.md  index.md  pipeline.md
src/webresearch/workflows/deep/: __init__.py  agents.py  config.py  models.py  pipeline.py  tools.py  workflow.py
src/webresearch/workflows/deep/prompts/: broad.j2  gap.j2  official.j2  output.j2  planner.j2  recent.j2  reviewer.j2
tests/: test_workflow.py
